tasks/ORDER-0: Fix sonnar issues